<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:id="@+id/quantityTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="20dp"
        android:text="@string/quantity"
        android:textSize="49sp"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/decrementBtn"
            android:layout_width="73dp"
            android:layout_height="73dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/decrement"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:onClick="decrementQuantity"
            />

        <TextView
            android:id="@+id/quantityCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="20dp"
            android:text="@string/quantityCount"
            android:textSize="49sp"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/IncrementBtn"
            android:layout_width="73dp"
            android:layout_height="73dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/Increment"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:onClick="IncrementQuantity"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/priceTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/price"
        android:textSize="49sp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/priceCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/priceCount"
        android:textSize="49sp"
        android:textColor="@color/white"
        />
    <Button
        android:id="@+id/orderBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/orderBtn"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:onClick="orderNow"
        android:padding="8dp"
        />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/backBtn"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:onClick="goBack"
        android:padding="8dp"
        />

</LinearLayout>